# uWeight

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  UML.puml  UML图生成使用说明.md  UML类图图例说明.md  app_icon.rc  code_statistics.ps1  code_statistics.py  convert_encoding.ps1  create_complete_installer.bat  create_installer.bat  create_release.bat  deploy_qtcreator.bat  deploy_release.bat  desktop_widget_system_uml.puml  generate_uml_diagram.bat  icons.qrc  installer.nsi  installer_enhanced.nsi  installer_fixed.nsi  installer_simple.nsi  打包说明.md  技术说明文档.md  文档导航.md  新Widget开发指南.md  更新日志.md  桌面小部件系统类详细介绍.md  类关系分析报告.md  统计代码.bat
deploy/: LICENSE  README.md
include/BackendManagement/: AIRankingConfigDialog.h  ConfigWindow.h  CreateWidgetDialog.h  ManagementWindow.h  NotesConfigDialog.h  ThemeSettingsDialog.h  WeatherConfigDialog.h
include/Common/: Types.h  WidgetEnums.h
include/Core/: BaseWidget.h  InteractionSystem.h  WidgetRenderer.h
include/Framework/: WidgetFramework.h  WidgetManager.h
include/Testing/: TestInterface.h
include/Utils/: Logger.h  SystemInfoCollector.h  SystemTray.h  ThemeManager.h  ThemeResourceManager.h
include/Widgets/: AIRankingWidget.h  CalendarWidget.h  ClockWidget.h  NotesWidget.h  SimpleNotesWidget.h  SystemInfoWidget.h  SystemPerformanceWidget.h  WeatherWidget.h
src/: main.cpp
src/BackendManagement/: AIRankingConfigDialog.cpp  ConfigWindow.cpp  CreateWidgetDialog.cpp  ManagementWindow.cpp  NotesConfigDialog.cpp  ThemeSettingsDialog.cpp  WeatherConfigDialog.cpp
src/Core/: BaseWidget.cpp  InteractionSystem.cpp  WidgetRenderer.cpp
src/Framework/: WidgetFramework.cpp  WidgetManager.cpp
src/Testing/: TestInterface.cpp
src/Utils/: Logger.cpp  SystemInfoCollector.cpp  SystemTray.cpp  ThemeManager.cpp  ThemeResourceManager.cpp
src/Widgets/: AIRankingWidget.cpp  CalendarWidget.cpp  ClockWidget.cpp  NotesWidget.cpp  SimpleNotesWidget.cpp  SystemInfoWidget.cpp  SystemPerformanceWidget.cpp  WeatherWidget.cpp
